--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
-orbs:
-  codecov: codecov/codecov@1.0.2
+#orbs:
+  #codecov: codecov/codecov@3
 
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
@@ -24,7 +24,7 @@ jobs:
       - run:
           name: Test
           command: mvn test
-      - codecov/upload
+      #- codecov/upload
 
 
 workflows:
